--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -9,7 +9,6 @@
 
 .section {
 	grid-template-rows: min-content min-content;
-	justify-items: center;
 	gap: func.em(76, var.$font-size-primary);
 	max-width: func.em(420, var.$font-size-primary);
 	margin: func.em(40, var.$font-size-primary) 0
@@ -18,7 +17,6 @@
 
 .section__head {
 	padding-top: func.em(40, var.$font-size-primary);
-	text-align: center;
 }
 
 @media (min-width: 48em) {
@@ -28,6 +26,6 @@
 	}
 
 	.section__head {
-		max-width: func.em(540, var.$font-size-primary);
+		justify-items: center;
 	}
 }
